2002-11-10  John Levon  <levon@movementarian.org>

	* autogen.sh: be verbose
 
	* gui/Makefile.am:
	* gui/ui/Makefile.am:
	* oprof_report/Makefile.am:
	* oprof_report/ui/Makefile.am: remove duplicate
	  set MOC/UIC
 
2002-11-10  John Levon  <levon@movementarian.org>

	* Makefile.am: add comment

	* configure.in: no need to subst OPROFILE_25
 
2002-11-09  John Levon  <levon@movementarian.org>

	* TODO: update
 
	* configure.in:
	* most Makefile.am: make separate objdir work,
	  except for module (impossible I suppose)

2002-11-09  John Levon  <levon@movementarian.org>

	* autogen.sh: use --foreign
 
2002-11-09  John Levon  <levon@movementarian.org>

	* configure.in: fix --with-kernel-support
 
	* doc/.cvsignore: add *.1

	* libabi/Makefile.am: don't install abi_test
 
2002-11-09  John Levon  <levon@movementarian.org>

	* all cvsignore: add Makefile.in
 
	* gui/Makefile.am: move EXTRA_DIST out of qt check

	* gui/ui/Makefile.am:
	* oprof_report/ui/Makefile.am: fix AM_CPPFLAGS typo
 
2002-11-09  John Levon  <levon@movementarian.org>

	* all build files: use automake, written by Phil
 
2002-11-09  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/samples_file.cpp: check than samples files version
	  match expected version fixing #635759

2002-11-07  John Levon  <levon@movementarian.org>

	* configure.in:
	* module/compat.h: 
	* module/compat24.h:
	* module/op_dname.c: 
	* module/oprofile.c: 
	* module/x86/op_fixmap.c: 
	* module/x86/op_nmi.c: remove 2.5 support from old
	  module code
 
2002-11-06  Will Cohen  <wcohen@redhat.com>

	* configure.in: Tests for ia64 architecture.
	* dae/opd_mapping.c: Added includes.
	* oprofile/dae/oprofiled.c (opd_do_samples): Typecast.
	* libop/op_cpu_type.c (cpu_names, cpu_nr_counters): Add IA64 info.
	* libop/op_cpu_type.h (op_cpu): Add IA64 enums.
	* libop/op_events.c: Add defines for IA64 and IA64 events.
	* libop++/op_print_event.cpp: Change include order to work on IA64.
	* module/oprofile.c: Include "arch.h" file.